<resources>
    <string name="app_name">RegForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name" >Name</string>
    <string name="ni" >N I</string>
    <string name="pass" >Passport</string>
    <string name="gender" >Gender</string>
    <string name="male" >Male</string>
    <string name="female" >Female</string>
    <string name="ok" >Ok</string>
    <string name="reset" >Reset</string>
    <string name="back">Back</string>
    <string name="title_activity_confrim">ConfrimActivity</string>
</resources>
