<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegForm">

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/float_label_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minHeight="@dimen/floatlabelheight"
        android:layout_toStartOf="@+id/imageView" />
    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/float_label_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/float_label_1"
        android:hint="@string/ni"
        android:minHeight="@dimen/floatlabelheight"
        android:layout_alignEnd="@+id/float_label_1" />
    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/float_label_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/float_label_2"
        android:hint="@string/pass"
        android:minHeight="@dimen/floatlabelheight"
        android:layout_alignEnd="@+id/float_label_2" />


    <ImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_action_account_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/radioGender"
        android:layout_alignBottom="@+id/radioGender"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true" />
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radioGender"
    android:layout_below="@+id/float_label_3"
    android:orientation="horizontal"
    android:labelFor="@string/gender"
    android:layout_alignParentEnd="true"
    android:layout_toEndOf="@+id/textView">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/radioButton"
        android:layout_below="@+id/float_label_3"
        android:layout_toEndOf="@+id/textView"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:id="@+id/radioButton2"

        android:layout_below="@+id/float_label_3"
        android:layout_toEndOf="@+id/radioButton"/>
</RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>
